# Robot-Full-sprints

./: .gitignore  README.md  menu.sh
install/: local_setup.sh  setup.sh
install/aruco_detector_pkg/share/aruco_detector_pkg/: package.sh
install/eurobot_cositas/lib/eurobot_cositas/: estados
install/eurobot_cositas/share/eurobot_cositas/: package.sh
install/eurobot_cositas/share/eurobot_cositas/launch/: estados_launch.py
log/: latest_build
src/eurobot_bringup/: package.xml  setup.cfg  setup.py
src/eurobot_bringup/config/: line_follower_params.yaml
src/eurobot_bringup/eurobot_bringup/: __init__.py  workspace_menu.py
src/eurobot_bringup/launch/: full_demo.launch.py  line_follower.launch.py  line_follower_with_viewer.launch.py  monitor.launch.py  navigation.launch.py  perception.launch.py  simulation.launch.py  star_fsm.launch.py  static_overhead_camera.launch.py  static_robot_aruco_tf.launch.py
src/eurobot_bringup/resource/: eurobot_bringup
src/eurobot_control/: package.xml  setup.cfg  setup.py
src/eurobot_control/eurobot_control/: __init__.py  camera_debug_viewer.py  line_follower.py  star_fsm.py
src/eurobot_control/resource/: eurobot_control
src/eurobot_cositas/: setup.py
src/eurobot_navigation/: package.xml  setup.cfg  setup.py
src/eurobot_navigation/eurobot_navigation/: __init__.py  route_navigation.py
src/eurobot_navigation/resource/: eurobot_navigation
src/eurobot_perception/: package.xml  setup.cfg  setup.py
src/eurobot_perception/eurobot_perception/: __init__.py  template_detector.py
src/eurobot_perception/resource/: eurobot_perception
