<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eurobot_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for worlds, launch files, and the workspace menu.</description>
  <maintainer email="iliasselkamilili@gmail.com">ilias</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <exec_depend>eurobot_control</exec_depend>
  <exec_depend>eurobot_navigation</exec_depend>
  <exec_depend>eurobot_perception</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
